# swhid_types

./: CHANGES.md  README.md  dune-project  index.html  index.mld  swhid_types.opam
.github/workflows/: build.yml  deploy.yml
api/: index.html
api/swhid_types/: index.html
coverage/: index.html
coverage/src/: swhid_types.ml.html
doc/: dune  index.mld
src/: dune
test/: dune  test.ml
